Renamed module FTTeamStats to TeamStats.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5335 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/bg/foxtrick.properties
+++ b/content/locale/bg/foxtrick.properties
@@ -68,7 +68,7 @@ foxtrick.ForumAnchors.desc=Adds a 'Goto Top' link to each post header
 foxtrick.ManagerButtons.addGuestbooklink.desc=Adds Send Message and Write in Guestbook buttons to manager page
 foxtrick.ConfirmTL.desc=Adds player transferlist confirm box
 foxtrick.HTThreadMarker.desc=Marks threads created by HTs
-foxtrick.FTTeamStats.desc=Compiles an overview of team.
+foxtrick.TeamStats.desc=Compiles an overview of team.
 foxtrick.LargeFlags.desc=Replaces the tiny country flag on player pages with a large one
 foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page
 foxtrick.TeamSelectBox.desc=Replaces the list of players by a selectbox on players page
@@ -111,9 +111,9 @@ foxtrick.ExtraShortcuts.statistics=statistics
 foxtrick.links.boxheader=Links
 
 #teamstats
-foxtrick.FTTeamStats.label=Team overview
-foxtrick.FTTeamStats.countries.label=Country overview
-foxtrick.FTTeamStats.totalTSI.label=TOTAL TSI
+foxtrick.TeamStats.label=Team overview
+foxtrick.TeamStats.countries.label=Country overview
+foxtrick.TeamStats.totalTSI.label=TOTAL TSI
 
 #gotoPostBox
 foxtrick.GoToPostBox.label=goto
