--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -150,12 +150,12 @@ foxtrick.ManagerButtons.desc=Add or change manager buttons on manager and team p
 foxtrick.ManagerButtons.GuestBook.desc=Adds Write in Guestbook link to manager page and team page
 foxtrick.ManagerButtons.LargeSendMail.desc=Open the large mailbox instead of the small one
 foxtrick.HTThreadMarker.desc=Marca els fils creats pels HTs
-foxtrick.FTTeamStats.desc=Compiles an overview of a team's players.
-foxtrick.FTTeamStats.General.desc=General information (TSI/age)
-foxtrick.FTTeamStats.Speciality.desc=Especialitat
-foxtrick.FTTeamStats.Personality.desc=Personalitat
-foxtrick.FTTeamStats.Status.desc=Status (cards/injures)
-foxtrick.FTTeamStats.Current_league.desc=Current League
+foxtrick.TeamStats.desc=Compiles an overview of a team's players.
+foxtrick.TeamStats.General.desc=General information (TSI/age)
+foxtrick.TeamStats.Speciality.desc=Especialitat
+foxtrick.TeamStats.Personality.desc=Personalitat
+foxtrick.TeamStats.Status.desc=Status (cards/injures)
+foxtrick.TeamStats.Current_league.desc=Current League
 foxtrick.ExtraPlayerInfo.desc=Show extra information of players on players page.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Show information of former and current coaches.
 foxtrick.ExtraPlayerInfo.Flag.desc=Show nationalities of players as flags.
@@ -390,15 +390,15 @@ foxtrick.youthpromotedays.prom_t=Pots promocionar-lo avui
 foxtrick.links.boxheader=Enllaços
 
 #teamstats
-foxtrick.FTTeamStats.label=Vista general de l’equip
-foxtrick.FTTeamStats.PlayerNotToOld.label=Jugadors < 19 anys
-foxtrick.FTTeamStats.PlayerToOld.label=Jugadors >= 19 anys
-foxtrick.FTTeamStats.Cards.label=Targetes
-foxtrick.FTTeamStats.Injured.label=Lesionat
-foxtrick.FTTeamStats.TransferListed.label=Transferible
-foxtrick.FTTeamStats.Pictures.label=Cares
-foxtrick.FTTeamStats.PlayedLatest.label=Ha jugat el darrer partit
-foxtrick.FTTeamStats.NotPlayedLatest.label=No ha jugat el darrer partit
+foxtrick.TeamStats.label=Vista general de l’equip
+foxtrick.TeamStats.PlayerNotToOld.label=Jugadors < 19 anys
+foxtrick.TeamStats.PlayerToOld.label=Jugadors >= 19 anys
+foxtrick.TeamStats.Cards.label=Targetes
+foxtrick.TeamStats.Injured.label=Lesionat
+foxtrick.TeamStats.TransferListed.label=Transferible
+foxtrick.TeamStats.Pictures.label=Cares
+foxtrick.TeamStats.PlayedLatest.label=Ha jugat el darrer partit
+foxtrick.TeamStats.NotPlayedLatest.label=No ha jugat el darrer partit
 
 #season stats
 #note to translators. use abreviations of league table where applicable
