--- a/content/locale/de/releaseNotes.xml
+++ b/content/locale/de/releaseNotes.xml
@@ -14,7 +14,7 @@
 
 
 <lines>SkillTable : Jetzt auch für Transfersuchergebnisse.</lines>
-<lines>FTTeamStats : Personalitäten und Führungsqualität zugefügt.</lines>
+<lines>TeamStats : Personalitäten und Führungsqualität zugefügt.</lines>
 <lines>CopyPlayerAd : Jetzt auch für Jugenspieler und sortiert nach Skillhöhe .</lines>
 
 <lines></lines> 
