--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -112,7 +112,7 @@ foxtrick.ForumRedirManagerToTeam.desc=Redirigir de la página del manager a la d
 foxtrick.ManagerButtons.addGuestbooklink.desc=Añadir botones para enviar mensaje y escribir en el libro de visitas en la página del manager del equipo
 foxtrick.ConfirmTL.desc=Añadir confirmación para incluir al jugador en la lista de transferencias
 foxtrick.HTThreadMarker.desc=Marcar los hilos creados por HTs
-foxtrick.FTTeamStats.desc=Agrega un resumen del equipo.
+foxtrick.TeamStats.desc=Agrega un resumen del equipo.
 foxtrick.LargeFlags.desc=Reemplazar la bandera pequeña del país en la página de jugadores por una mayor
 foxtrick.GoToPostBox.desc=Añadir un cuadro de texto para ir a un hilo determinado en la página de la conferencia
 foxtrick.TeamSelectBox.desc=Reemplaza la lista de jugadores por una lista desplegable en la página del los jugadores.
@@ -287,17 +287,17 @@ foxtrick.ExtraShortcuts.prefs=preferencias
 foxtrick.links.boxheader=Links
 
 #teamstats
-foxtrick.FTTeamStats.label=Resumen del equipo
-foxtrick.FTTeamStats.countries.label=Resumen del país
-foxtrick.FTTeamStats.totalTSI.label=TOTAL TSI
-foxtrick.FTTeamStats.PlayerNotToOld.label=Players < 19 años
-foxtrick.FTTeamStats.PlayerToOld.label=Players >= 19 años
-foxtrick.FTTeamStats.Cards.label=Tarjetas
-foxtrick.FTTeamStats.Injured.label=Lesionado
-foxtrick.FTTeamStats.TransferListed.label=En lista de transferencias
-foxtrick.FTTeamStats.Pictures.label=Imágenes
-foxtrick.FTTeamStats.PlayedLatest.label=Jugaron el último partido
-foxtrick.FTTeamStats.NotPlayedLatest.label=No jugaron el último partido
+foxtrick.TeamStats.label=Resumen del equipo
+foxtrick.TeamStats.countries.label=Resumen del país
+foxtrick.TeamStats.totalTSI.label=TOTAL TSI
+foxtrick.TeamStats.PlayerNotToOld.label=Players < 19 años
+foxtrick.TeamStats.PlayerToOld.label=Players >= 19 años
+foxtrick.TeamStats.Cards.label=Tarjetas
+foxtrick.TeamStats.Injured.label=Lesionado
+foxtrick.TeamStats.TransferListed.label=En lista de transferencias
+foxtrick.TeamStats.Pictures.label=Imágenes
+foxtrick.TeamStats.PlayedLatest.label=Jugaron el último partido
+foxtrick.TeamStats.NotPlayedLatest.label=No jugaron el último partido
 
 #season stats
 #note to translators. use abreviations of league table where applicable
