--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -146,12 +146,12 @@ foxtrick.ManagerButtons.desc=Lisää tai vaihda manageritoiminnot managerin tai 
 foxtrick.ManagerButtons.GuestBook.desc=Lisää 'Lähetä viesti' ja 'Kirjoita vieraskirjaan' toiminnot managerisivulle
 foxtrick.ManagerButtons.LargeSendMail.desc=Avaa laajempi viestilaatikko pienemmän sijaan
 foxtrick.HTThreadMarker.desc=Merkkaa HTn luomat keskustelupuut
-foxtrick.FTTeamStats.desc=Laatii yleiskatsauksen joukkueen pelaajista.
-foxtrick.FTTeamStats.General.desc=Yleistä tietoa (TSI/ikä)
-foxtrick.FTTeamStats.Speciality.desc=Erikoisuus
-foxtrick.FTTeamStats.Personality.desc=Persoonallisuus
-foxtrick.FTTeamStats.Status.desc=Status (kortit/loukkaantumiset)
-foxtrick.FTTeamStats.Current_league.desc=Nykyinen sarja
+foxtrick.TeamStats.desc=Laatii yleiskatsauksen joukkueen pelaajista.
+foxtrick.TeamStats.General.desc=Yleistä tietoa (TSI/ikä)
+foxtrick.TeamStats.Speciality.desc=Erikoisuus
+foxtrick.TeamStats.Personality.desc=Persoonallisuus
+foxtrick.TeamStats.Status.desc=Status (kortit/loukkaantumiset)
+foxtrick.TeamStats.Current_league.desc=Nykyinen sarja
 foxtrick.ExtraPlayerInfo.desc=Näytä pelaajista lisätietoa pelaajasivulla
 foxtrick.ExtraPlayerInfo.Flag.desc=Näytä pelaajien kansallisuudet lisäämällä lippu pelaajaan.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Lisää lisätietoa nykyisistä ja aikaisemmista valmentajista.
@@ -336,15 +336,15 @@ foxtrick.youthpromotedays.prom_t=Pelaajan voi nostaa tänään!
 foxtrick.links.boxheader=Linkit
 
 #teamstats
-foxtrick.FTTeamStats.label=Joukkueen yleiskatsaus
-foxtrick.FTTeamStats.PlayerNotToOld.label=Pelaajat < 19v
-foxtrick.FTTeamStats.PlayerToOld.label=Pelaajat >= 19v
-foxtrick.FTTeamStats.Cards.label=Kortit
-foxtrick.FTTeamStats.Injured.label=Loukkaantuneet
-foxtrick.FTTeamStats.TransferListed.label=Siirtolistatut
-foxtrick.FTTeamStats.Pictures.label=Joukkuekuva
-foxtrick.FTTeamStats.PlayedLatest.label=Pelasi viim. ottelussa
-foxtrick.FTTeamStats.NotPlayedLatest.label=Ei pelannut viim. ottelussa
+foxtrick.TeamStats.label=Joukkueen yleiskatsaus
+foxtrick.TeamStats.PlayerNotToOld.label=Pelaajat < 19v
+foxtrick.TeamStats.PlayerToOld.label=Pelaajat >= 19v
+foxtrick.TeamStats.Cards.label=Kortit
+foxtrick.TeamStats.Injured.label=Loukkaantuneet
+foxtrick.TeamStats.TransferListed.label=Siirtolistatut
+foxtrick.TeamStats.Pictures.label=Joukkuekuva
+foxtrick.TeamStats.PlayedLatest.label=Pelasi viim. ottelussa
+foxtrick.TeamStats.NotPlayedLatest.label=Ei pelannut viim. ottelussa
 
 #season stats
 #note to translators. use abreviations of league table where applicable
