--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -151,7 +151,7 @@ foxtrick.MatchReportFormat.desc=Présentation du compte-rendu des matchs ligne p
 foxtrick.ForumRedirManagerToTeam.desc=Redirige les liens du Forum vers la page Général du club au lieu de la page Manager.
 foxtrick.ManagerButtons.addGuestbooklink.desc=Ajoute les boutons 'Envoyer un message' et 'Ecrire dans le livre d'or' sur la page Manager.
 foxtrick.HTThreadMarker.desc=Marque les sujets des Forums créés par les Officiels.
-foxtrick.FTTeamStats.desc=Ajoute une synthèse de l'équipe.
+foxtrick.TeamStats.desc=Ajoute une synthèse de l'équipe.
 foxtrick.ExtraPlayerInfo.Flag.desc=Ajoute le drapeau de la nationalité des joueurs.
 foxtrick.ExtraPlayerInfo.LeadershipAndExperience.desc=Ajoute le tempérament de chef et l'expérience des joueurs.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Ajoute le type et le niveau de l'entraineur.
@@ -399,17 +399,17 @@ foxtrick.youthpromotedays.prom_t=Le joueur peut être promu aujourd'hui !
 foxtrick.links.boxheader=Liens externes
 
 #teamstats
-foxtrick.FTTeamStats.label=Synthèse de l'équipe
-foxtrick.FTTeamStats.countries.label=Synthèse du pays
-foxtrick.FTTeamStats.totalTSI.label=TOTAL TSI
-foxtrick.FTTeamStats.PlayerNotToOld.label=Joueurs < 19 ans
-foxtrick.FTTeamStats.PlayerToOld.label=Joueurs >= 19 ans
-foxtrick.FTTeamStats.Cards.label=Cartons
-foxtrick.FTTeamStats.Injured.label=Blessés
-foxtrick.FTTeamStats.TransferListed.label=Sur la liste des transferts
-foxtrick.FTTeamStats.Pictures.label=Photos
-foxtrick.FTTeamStats.PlayedLatest.label=A joué pendant le dernier match
-foxtrick.FTTeamStats.NotPlayedLatest.label=N'a pas joué pendant le dernier match
+foxtrick.TeamStats.label=Synthèse de l'équipe
+foxtrick.TeamStats.countries.label=Synthèse du pays
+foxtrick.TeamStats.totalTSI.label=TOTAL TSI
+foxtrick.TeamStats.PlayerNotToOld.label=Joueurs < 19 ans
+foxtrick.TeamStats.PlayerToOld.label=Joueurs >= 19 ans
+foxtrick.TeamStats.Cards.label=Cartons
+foxtrick.TeamStats.Injured.label=Blessés
+foxtrick.TeamStats.TransferListed.label=Sur la liste des transferts
+foxtrick.TeamStats.Pictures.label=Photos
+foxtrick.TeamStats.PlayedLatest.label=A joué pendant le dernier match
+foxtrick.TeamStats.NotPlayedLatest.label=N'a pas joué pendant le dernier match
 
 #season stats
 #note to translators. use abreviations of league table where applicable
