--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -150,7 +150,7 @@ foxtrick.MatchReportFormat.desc=Prikaz događaja u izvješću 'red po red'. Ispo
 foxtrick.ForumRedirManagerToTeam.desc=Preusmjeriti link kor. imena na forumu sa korisnikove stranice na stranicu korisnikovog kluba
 foxtrick.ManagerButtons.addGuestbooklink.desc=Dodati 'Pošalji poruku' i 'Upiši se u knjigu gostiju' na korisnikovoj stranici
 foxtrick.HTThreadMarker.desc=Istaknuti bojom teme otvorene od strane HT-osoblja
-foxtrick.FTTeamStats.desc=Prikazati opći pregled podataka o momčadi.
+foxtrick.TeamStats.desc=Prikazati opći pregled podataka o momčadi.
 foxtrick.ExtraPlayerInfo.desc=Prikazati dodatne informacije o igračima na stranici s igračima.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Prikazati informacije o bivšim i sadašnjim trenerima.
 foxtrick.ExtraPlayerInfo.LeadershipAndExperience.desc=Prikaz razine vodstva i iskustva kod igrača.
@@ -405,17 +405,17 @@ foxtrick.youthpromotedays.prom_t=Igrač se može promovirati danas!
 foxtrick.links.boxheader=Linkovi
 
 #teamstats
-foxtrick.FTTeamStats.label=Pregled momčadi
-foxtrick.FTTeamStats.countries.label=Pregled države
-foxtrick.FTTeamStats.totalTSI.label=UKUPNI TSI
-foxtrick.FTTeamStats.PlayerNotToOld.label=Igrači ispod 19 god.
-foxtrick.FTTeamStats.PlayerToOld.label=Igrači sa ili iznad 19 god.
-foxtrick.FTTeamStats.Cards.label=Kartoni
-foxtrick.FTTeamStats.Injured.label=Ozlijede
-foxtrick.FTTeamStats.TransferListed.label=Na transfer listi
-foxtrick.FTTeamStats.Pictures.label=Slike
-foxtrick.FTTeamStats.PlayedLatest.label=Igrao u posljednjoj utakmici
-foxtrick.FTTeamStats.NotPlayedLatest.label=Nije igrao u posljednjoj utakmici
+foxtrick.TeamStats.label=Pregled momčadi
+foxtrick.TeamStats.countries.label=Pregled države
+foxtrick.TeamStats.totalTSI.label=UKUPNI TSI
+foxtrick.TeamStats.PlayerNotToOld.label=Igrači ispod 19 god.
+foxtrick.TeamStats.PlayerToOld.label=Igrači sa ili iznad 19 god.
+foxtrick.TeamStats.Cards.label=Kartoni
+foxtrick.TeamStats.Injured.label=Ozlijede
+foxtrick.TeamStats.TransferListed.label=Na transfer listi
+foxtrick.TeamStats.Pictures.label=Slike
+foxtrick.TeamStats.PlayedLatest.label=Igrao u posljednjoj utakmici
+foxtrick.TeamStats.NotPlayedLatest.label=Nije igrao u posljednjoj utakmici
 
 #season stats
 #note to translators. use abreviations of league table where applicable
