--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -146,7 +146,7 @@ foxtrick.MatchReportFormat.desc=A meccsriport soronkénti, a meccseseményeknek 
 foxtrick.ForumRedirManagerToTeam.desc=Átirányítja a csapatoldalra mutató fórumhivatkozásokat a felhasználói oldalra
 foxtrick.AddManagerButtons.desc=A menedzser- és a csapatoldalhoz ad egy „Írj a vendégkönyvbe” hivatkozást
 foxtrick.HTThreadMarker.desc=Megjelöli a HT-k által indított témákat
-foxtrick.FTTeamStats.desc=Áttekintést készít a csapat játékosairól.
+foxtrick.TeamStats.desc=Áttekintést készít a csapat játékosairól.
 foxtrick.ExtraPlayerInfo.desc=Extra információkat jelenít meg a játékosokról a Játékosok oldalon.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Információkat jelenít meg a korábbi edző(k)ről és a jelenlegiről.
 foxtrick.ExtraPlayerInfo.Flag.desc=Zászlókként jeleníti meg a játékosok nemzetiségét.
@@ -399,15 +399,15 @@ foxtrick.youthpromotedays.prom_t=A játékost most azonnal felhozhatod!
 foxtrick.links.boxheader=Hivatkozások
 
 #teamstats
-foxtrick.FTTeamStats.label=Csapatáttekintés
-foxtrick.FTTeamStats.PlayerNotToOld.label=19 évesnél fiatalabb játékosok
-foxtrick.FTTeamStats.PlayerToOld.label=19 évesnél idősebb játékosok
-foxtrick.FTTeamStats.Cards.label=Lapok
-foxtrick.FTTeamStats.Injured.label=Sérült
-foxtrick.FTTeamStats.TransferListed.label=Piacon van
-foxtrick.FTTeamStats.Pictures.label=Arcképek
-foxtrick.FTTeamStats.PlayedLatest.label=Játszott a legutóbbi mérkőzésen
-foxtrick.FTTeamStats.NotPlayedLatest.label=Nem játszott a legutóbbi mérkőzésen
+foxtrick.TeamStats.label=Csapatáttekintés
+foxtrick.TeamStats.PlayerNotToOld.label=19 évesnél fiatalabb játékosok
+foxtrick.TeamStats.PlayerToOld.label=19 évesnél idősebb játékosok
+foxtrick.TeamStats.Cards.label=Lapok
+foxtrick.TeamStats.Injured.label=Sérült
+foxtrick.TeamStats.TransferListed.label=Piacon van
+foxtrick.TeamStats.Pictures.label=Arcképek
+foxtrick.TeamStats.PlayedLatest.label=Játszott a legutóbbi mérkőzésen
+foxtrick.TeamStats.NotPlayedLatest.label=Nem játszott a legutóbbi mérkőzésen
 
 #season stats
 #note to translators. use abreviations of league table where applicable
