--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -111,7 +111,7 @@ foxtrick.ForumRedirManagerToTeam.desc=Wann am Forum op den Alias vun engem Manag
 foxtrick.ManagerButtons.addGuestbooklink.desc=D'Knäppercher 'Message schécken' an 'An d'Gëllent Buch schreiwen' ginn op der Manager-Säit dobäigesat.
 foxtrick.ConfirmTL.desc=Wann e Spiller op den Transfermaart gesat gëtt, kënnt eng Këscht fir no enger Confirmatioun ze froen.
 foxtrick.HTThreadMarker.desc=Sujete markéieren, déi vun engem HT opgemaach goufen.
-foxtrick.FTTeamStats.desc=En Iwwerblick iwwer d'Équipe kompiliéieren.
+foxtrick.TeamStats.desc=En Iwwerblick iwwer d'Équipe kompiliéieren.
 foxtrick.LargeFlags.desc=Ersetzt de klenge Fändel vum Land op de Spillersäiten duerch e méi grousse Fändel.
 foxtrick.GoToPostBox.desc=Eng Optioun 'Dohigoen' fir e Message x ze kucken, kënnt op der Säit vum Forum dobäi.
 foxtrick.TeamSelectBox.desc=D'Lëscht vun de Spiller op der Säit vun de Spiller gëtt duerch en Dropwdown-Menü ersat. Mat engem Klick op den Header gëtt tëschent der Lëscht an dem Dropdown-Menü hin- an hiergewiesselt.
@@ -290,17 +290,17 @@ foxtrick.ExtraShortcuts.prefs=Astellungen
 foxtrick.links.boxheader=Links
 
 #teamstats
-foxtrick.FTTeamStats.label=Iwwersiicht fir d'Équipe
-foxtrick.FTTeamStats.countries.label=Iwwersiicht fir d'Land
-foxtrick.FTTeamStats.totalTSI.label=KOMPLETTEN TSI
-foxtrick.FTTeamStats.PlayerNotToOld.label=Spiller < 19 Joer
-foxtrick.FTTeamStats.PlayerToOld.label=Spiller >= 19 Joer
-foxtrick.FTTeamStats.Cards.label=Kaarten
-foxtrick.FTTeamStats.Injured.label=Verletzt
-foxtrick.FTTeamStats.TransferListed.label=Op dem Transfermaart
-foxtrick.FTTeamStats.Pictures.label=Biller
-foxtrick.FTTeamStats.PlayedLatest.label=Huet am leschte Match gespillt
-foxtrick.FTTeamStats.NotPlayedLatest.label=Huet net am leschte Match gespillt
+foxtrick.TeamStats.label=Iwwersiicht fir d'Équipe
+foxtrick.TeamStats.countries.label=Iwwersiicht fir d'Land
+foxtrick.TeamStats.totalTSI.label=KOMPLETTEN TSI
+foxtrick.TeamStats.PlayerNotToOld.label=Spiller < 19 Joer
+foxtrick.TeamStats.PlayerToOld.label=Spiller >= 19 Joer
+foxtrick.TeamStats.Cards.label=Kaarten
+foxtrick.TeamStats.Injured.label=Verletzt
+foxtrick.TeamStats.TransferListed.label=Op dem Transfermaart
+foxtrick.TeamStats.Pictures.label=Biller
+foxtrick.TeamStats.PlayedLatest.label=Huet am leschte Match gespillt
+foxtrick.TeamStats.NotPlayedLatest.label=Huet net am leschte Match gespillt
 
 #season stats
 #note to translators. use abreviations of league table where applicable
