--- a/content/locale/mk/foxtrick.properties
+++ b/content/locale/mk/foxtrick.properties
@@ -111,7 +111,7 @@ foxtrick.ForumRedirManagerToTeam.desc=Ги пренасочува линкови
 foxtrick.ManagerButtons.addGuestbooklink.desc=Додава Испрати Порака и Напиши во Книгата за Гости копчиња на страницата од менаџерот
 foxtrick.ConfirmTL.desc=Додава кутија која прашува за потврда пред да поставите играч на трансфер листата
 foxtrick.HTThreadMarker.desc=Ги обележува темите започнати од HT членови
-foxtrick.FTTeamStats.desc=Создава преглед на тимот.
+foxtrick.TeamStats.desc=Создава преглед на тимот.
 foxtrick.LargeFlags.desc=Го заменува малото државно знаме на страниците од играчите со големо
 foxtrick.GoToPostBox.desc=Додава кутија 'оди на' на форумските страници
 foxtrick.TeamSelectBox.desc=Ја заменува листата на играчи од прозорчето за селектирање на страната на играчите. При кликнување на насловот се бира помеѓу листа и селектирање на прозорче
@@ -285,17 +285,17 @@ foxtrick.ExtraShortcuts.prefs=preferences
 foxtrick.links.boxheader=Линкови
 
 #teamstats
-foxtrick.FTTeamStats.label=Преглед на тимот
-foxtrick.FTTeamStats.countries.label=Преглед на државата
-foxtrick.FTTeamStats.totalTSI.label=ВКУПЕН TSI
-foxtrick.FTTeamStats.PlayerNotToOld.label=Играчи < 19 год
-foxtrick.FTTeamStats.PlayerToOld.label=Играчи >= 19 год
-foxtrick.FTTeamStats.Cards.label=Картони
-foxtrick.FTTeamStats.Injured.label=Повредени
-foxtrick.FTTeamStats.TransferListed.label=На трансфер листа
-foxtrick.FTTeamStats.Pictures.label=Слики
-foxtrick.FTTeamStats.PlayedLatest.label=Играл во последен натпревар
-foxtrick.FTTeamStats.NotPlayedLatest.label=Не играл во последен натпревар
+foxtrick.TeamStats.label=Преглед на тимот
+foxtrick.TeamStats.countries.label=Преглед на државата
+foxtrick.TeamStats.totalTSI.label=ВКУПЕН TSI
+foxtrick.TeamStats.PlayerNotToOld.label=Играчи < 19 год
+foxtrick.TeamStats.PlayerToOld.label=Играчи >= 19 год
+foxtrick.TeamStats.Cards.label=Картони
+foxtrick.TeamStats.Injured.label=Повредени
+foxtrick.TeamStats.TransferListed.label=На трансфер листа
+foxtrick.TeamStats.Pictures.label=Слики
+foxtrick.TeamStats.PlayedLatest.label=Играл во последен натпревар
+foxtrick.TeamStats.NotPlayedLatest.label=Не играл во последен натпревар
 
 #season stats
 #note to translators. use abreviations of league table where applicable
