--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -147,7 +147,7 @@ foxtrick.MatchReportFormat.desc=Regel voor regel presentatie van het verslag, ov
 foxtrick.ForumRedirManagerToTeam.desc=Stuur links van het forum door naar de teampagina in plaats van de managerpagina
 foxtrick.ManagerButtons.addGuestbooklink.desc=Toon 'Schrijf in het gastenboek' knop op de managerpagina
 foxtrick.HTThreadMarker.desc=Markeer forumdraadjes die door HT's zijn aangemaakt
-foxtrick.FTTeamStats.desc=Stel een teamoverzicht samen
+foxtrick.TeamStats.desc=Stel een teamoverzicht samen
 foxtrick.ExtraPlayerInfo.desc=Toon extra informatie over een speler op de spelerspagina
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Toon het type trainer van vorige en huidige trainers
 foxtrick.ExtraPlayerInfo.Flag.desc=Toon de nationaliteit van spelers als vlaggetjes
@@ -401,17 +401,17 @@ foxtrick.youthpromotedays.prom_t=Speler kan vandaag gepromoveerd worden!
 foxtrick.links.boxheader=Links
 
 #teamstats
-foxtrick.FTTeamStats.label=Teamoverzicht
-foxtrick.FTTeamStats.countries.label=Landoverzicht
-foxtrick.FTTeamStats.totalTSI.label=TSI TOTAAL
-foxtrick.FTTeamStats.PlayerNotToOld.label=Spelers < 19jr
-foxtrick.FTTeamStats.PlayerToOld.label=Spelers >= 19jr
-foxtrick.FTTeamStats.Cards.label=Kaarten
-foxtrick.FTTeamStats.Injured.label=Geblesseerd
-foxtrick.FTTeamStats.TransferListed.label=Op de transferlijst
-foxtrick.FTTeamStats.Pictures.label=Gezichten
-foxtrick.FTTeamStats.PlayedLatest.label=Speelde in de laatste wedstrijd
-foxtrick.FTTeamStats.NotPlayedLatest.label=Speelde niet in de laatste wedstrijd
+foxtrick.TeamStats.label=Teamoverzicht
+foxtrick.TeamStats.countries.label=Landoverzicht
+foxtrick.TeamStats.totalTSI.label=TSI TOTAAL
+foxtrick.TeamStats.PlayerNotToOld.label=Spelers < 19jr
+foxtrick.TeamStats.PlayerToOld.label=Spelers >= 19jr
+foxtrick.TeamStats.Cards.label=Kaarten
+foxtrick.TeamStats.Injured.label=Geblesseerd
+foxtrick.TeamStats.TransferListed.label=Op de transferlijst
+foxtrick.TeamStats.Pictures.label=Gezichten
+foxtrick.TeamStats.PlayedLatest.label=Speelde in de laatste wedstrijd
+foxtrick.TeamStats.NotPlayedLatest.label=Speelde niet in de laatste wedstrijd
 
 #season stats
 #note to translators. use abreviations of league table where applicable
