--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -145,7 +145,7 @@ foxtrick.AddManagerButtons.desc=Adauga sau schimba butoanele pe pagina managerul
 foxtrick.ManagerButtons.GuestBook.desc=Adauga butoanele 'Scrie in cartea de oaspeti' pe pagina managerului si pagina echipei
 foxtrick.ManagerButtons.LargeSendMail.desc=Deschide casuta de mesaje mari in locul celei mici
 foxtrick.HTThreadMarker.desc=Marcheaza subiectele create de HT-i
-foxtrick.FTTeamStats.desc=Creaza o imagine de ansamblu a jucatorilor echipei.
+foxtrick.TeamStats.desc=Creaza o imagine de ansamblu a jucatorilor echipei.
 foxtrick.ExtraPlayerInfo.desc=Arata informatii suplimentare a jucatorilor pe pagina jucatorilor.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Arata informatii despre fosti si actuali antrenori.
 foxtrick.ExtraPlayerInfo.Flag.desc=Arata nationalitatea jucatorilor sub forma de steaguri.
@@ -382,15 +382,15 @@ foxtrick.youthpromotedays.prom_t=Jucatorul poate fi promovat astazi!
 foxtrick.links.boxheader=Linkuri
 
 #teamstats
-foxtrick.FTTeamStats.label=Situatia lotului
-foxtrick.FTTeamStats.PlayerNotToOld.label=Jucatori < 19 ani
-foxtrick.FTTeamStats.PlayerToOld.label=Jucatori >= 19 ani
-foxtrick.FTTeamStats.Cards.label=Cartonase
-foxtrick.FTTeamStats.Injured.label=Accidentati
-foxtrick.FTTeamStats.TransferListed.label=Jucatori aflati pe lista de transferuri
-foxtrick.FTTeamStats.Pictures.label=Poze
-foxtrick.FTTeamStats.PlayedLatest.label=Jucat in ultimul meci
-foxtrick.FTTeamStats.NotPlayedLatest.label=Nejucat in ultimul meci
+foxtrick.TeamStats.label=Situatia lotului
+foxtrick.TeamStats.PlayerNotToOld.label=Jucatori < 19 ani
+foxtrick.TeamStats.PlayerToOld.label=Jucatori >= 19 ani
+foxtrick.TeamStats.Cards.label=Cartonase
+foxtrick.TeamStats.Injured.label=Accidentati
+foxtrick.TeamStats.TransferListed.label=Jucatori aflati pe lista de transferuri
+foxtrick.TeamStats.Pictures.label=Poze
+foxtrick.TeamStats.PlayedLatest.label=Jucat in ultimul meci
+foxtrick.TeamStats.NotPlayedLatest.label=Nejucat in ultimul meci
 
 #season stats
 #note to translators. use abreviations of league table where applicable
