--- a/content/locale/ru/releaseNotes.xml
+++ b/content/locale/ru/releaseNotes.xml
@@ -12,7 +12,7 @@
   <lines>ForumYouthIcons: Новая кнопка для преобразования текста в таблицу.</lines>
 
   <lines>SkillTable: Таблица навыков добавлена к результатам поиска трансферов. Также в таблице появились новые столбцы.</lines>
-  <lines>FTTeamStats: Добавлены столбцы для лидерских качеств и характера.</lines>
+  <lines>TeamStats: Добавлены столбцы для лидерских качеств и характера.</lines>
   <lines>CopyPlayerAd: Теперь поддерживаются игроки академии и навыки игрока отсортированы.</lines>
 
   <lines></lines> 
