--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -147,7 +147,7 @@ foxtrick.ManagerButtons.addGuestbooklink.desc=Na stránku manažéra pridáva od
 foxtrick.ConfirmTL.desc=Pri umiestňovaní hráča na prestupovú listinu zobrazí potvrdzovacie okno
 foxtrick.ConfirmStaffChange.desc=Pridáva okno s potvrdením pred najímaním/vyhadzovaním zamestnancov
 foxtrick.HTThreadMarker.desc=Farebne označí vlákna založené HT-manmi
-foxtrick.FTTeamStats.desc=Vytvorí prehľad o tíme
+foxtrick.TeamStats.desc=Vytvorí prehľad o tíme
 foxtrick.ExtraPlayerInfo.Flag.desc=Pridáva vlajky k hráčom.
 foxtrick.ExtraPlayerInfo.LeadershipAndExperience.desc=Pridáva skúsenosti a vodcovstvo k hráčom
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Pridáva zameranie k bývalým a súčasným trénerom.
@@ -393,17 +393,17 @@ foxtrick.youthpromotedays.prom_t=Hráč môže byť dnes preradený!
 foxtrick.links.boxheader=Odkazy
 
 #teamstats
-foxtrick.FTTeamStats.label=Prehľad o tíme
-foxtrick.FTTeamStats.countries.label=Prehľad krajiny
-foxtrick.FTTeamStats.totalTSI.label=Celkové TSI
-foxtrick.FTTeamStats.PlayerNotToOld.label=Hráči < 19 rokov
-foxtrick.FTTeamStats.PlayerToOld.label=Hráči >= 19 rokov
-foxtrick.FTTeamStats.Cards.label=Karty
-foxtrick.FTTeamStats.Injured.label=Zranenia
-foxtrick.FTTeamStats.TransferListed.label=Na trhu
-foxtrick.FTTeamStats.Pictures.label=Obrázky
-foxtrick.FTTeamStats.PlayedLatest.label=Hrali v poslednom zápase
-foxtrick.FTTeamStats.NotPlayedLatest.label=Nehrali v poslednom zápase
+foxtrick.TeamStats.label=Prehľad o tíme
+foxtrick.TeamStats.countries.label=Prehľad krajiny
+foxtrick.TeamStats.totalTSI.label=Celkové TSI
+foxtrick.TeamStats.PlayerNotToOld.label=Hráči < 19 rokov
+foxtrick.TeamStats.PlayerToOld.label=Hráči >= 19 rokov
+foxtrick.TeamStats.Cards.label=Karty
+foxtrick.TeamStats.Injured.label=Zranenia
+foxtrick.TeamStats.TransferListed.label=Na trhu
+foxtrick.TeamStats.Pictures.label=Obrázky
+foxtrick.TeamStats.PlayedLatest.label=Hrali v poslednom zápase
+foxtrick.TeamStats.NotPlayedLatest.label=Nehrali v poslednom zápase
 
 #season stats
 #note to translators. use abreviations of league table where applicable
