--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -114,7 +114,7 @@ foxtrick.ForumRedirManagerToTeam.desc=Adreson link-et nga faqja e manaxherit tek
 foxtrick.ManagerButtons.addGuestbooklink.desc=Shton butonat Dërgo Mesazh dhe Shkruaj te Libri i Vizitorëve në faqen e manaxherit
 foxtrick.ConfirmTL.desc=Shton kuti që pyet konfirmimin përpara nxerrjes në shitje të një lojtari
 foxtrick.HTThreadMarker.desc=Evidencon temat e krijuara nga HTs
-foxtrick.FTTeamStats.desc=Krijon një paraqitje të ekipit.
+foxtrick.TeamStats.desc=Krijon një paraqitje të ekipit.
 foxtrick.LargeFlags.desc=Zëvëndëson flamurin e vogël të shtetit me një më të madh
 foxtrick.GoToPostBox.desc=Shton kuti një kuti ShkoTekPostimiX në faqen e forumit
 foxtrick.TeamSelectBox.desc=Zëvëndëson listën e lojtarëve me një kuti zgjedhëse në faqen e lojtarëve. Duke klikuar tek titulli ndryshon midis listës dhe kutisë zgjedhëse
@@ -297,17 +297,17 @@ foxtrick.ExtraShortcuts.prefs=preferencat
 foxtrick.links.boxheader=Link
 
 #teamstats
-foxtrick.FTTeamStats.label=Paraqitja e ekipit
-foxtrick.FTTeamStats.countries.label=Paraqitja e shtetit
-foxtrick.FTTeamStats.totalTSI.label=ITA Totale
-foxtrick.FTTeamStats.PlayerNotToOld.label=Lojtarë < 19 vjeç
-foxtrick.FTTeamStats.PlayerToOld.label=Lojtarë >= 19 vjeç
-foxtrick.FTTeamStats.Cards.label=Kartona
-foxtrick.FTTeamStats.Injured.label=Të dëmtuar
-foxtrick.FTTeamStats.TransferListed.label=Në shitje
-foxtrick.FTTeamStats.Pictures.label=Foto
-foxtrick.FTTeamStats.PlayedLatest.label=Luajtën ndeshjen e fundit
-foxtrick.FTTeamStats.NotPlayedLatest.label=Nuk luajtën ndeshjen e fundit
+foxtrick.TeamStats.label=Paraqitja e ekipit
+foxtrick.TeamStats.countries.label=Paraqitja e shtetit
+foxtrick.TeamStats.totalTSI.label=ITA Totale
+foxtrick.TeamStats.PlayerNotToOld.label=Lojtarë < 19 vjeç
+foxtrick.TeamStats.PlayerToOld.label=Lojtarë >= 19 vjeç
+foxtrick.TeamStats.Cards.label=Kartona
+foxtrick.TeamStats.Injured.label=Të dëmtuar
+foxtrick.TeamStats.TransferListed.label=Në shitje
+foxtrick.TeamStats.Pictures.label=Foto
+foxtrick.TeamStats.PlayedLatest.label=Luajtën ndeshjen e fundit
+foxtrick.TeamStats.NotPlayedLatest.label=Nuk luajtën ndeshjen e fundit
 
 #season stats
 #note to translators. use abreviations of league table where applicable
