--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -192,7 +192,7 @@ foxtrick.ManagerButtons.addGuestbooklink.desc=Lägger till 'Skicka meddelande' o
 foxtrick.ConfirmTL.desc=Lägger till bekräftelseruta för transferlistning
 foxtrick.ConfirmStaffChange.desc=Lägger till bekräftelseruta för anställa/avskeda stabsmedlemmar
 foxtrick.HTThreadMarker.desc=Markerar trådar skapade av HT-*
-foxtrick.FTTeamStats.desc=Skapar en översikt av laget
+foxtrick.TeamStats.desc=Skapar en översikt av laget
 foxtrick.ExtraPlayerInfo.Flag.desc=Lägger till flaggor på spelaröversikten
 foxtrick.ExtraPlayerInfo.LeadershipAndExperience.desc=Lägger till ledarförmåga och rutin på spelaröversikten
 
@@ -480,17 +480,17 @@ foxtrick.youthpromotedays.prom_t=Spelaren kan flyttas upp idag!
 foxtrick.links.boxheader=Länkar
 
 #teamstats
-foxtrick.FTTeamStats.label=Lagöversikt
-foxtrick.FTTeamStats.countries.label=Landöversikt
-foxtrick.FTTeamStats.totalTSI.label=TOTAL TSI
-foxtrick.FTTeamStats.PlayerNotToOld.label=Spelare < 19 år
-foxtrick.FTTeamStats.PlayerToOld.label=Spelare >= 19 år
-foxtrick.FTTeamStats.Cards.label=Kort
-foxtrick.FTTeamStats.Injured.label=Skadad
-foxtrick.FTTeamStats.TransferListed.label=Transferlistad
-foxtrick.FTTeamStats.Pictures.label=Bilder
-foxtrick.FTTeamStats.PlayedLatest.label=Spelade i senaste matchen
-foxtrick.FTTeamStats.NotPlayedLatest.label=Spelade inte i senaste matchen
+foxtrick.TeamStats.label=Lagöversikt
+foxtrick.TeamStats.countries.label=Landöversikt
+foxtrick.TeamStats.totalTSI.label=TOTAL TSI
+foxtrick.TeamStats.PlayerNotToOld.label=Spelare < 19 år
+foxtrick.TeamStats.PlayerToOld.label=Spelare >= 19 år
+foxtrick.TeamStats.Cards.label=Kort
+foxtrick.TeamStats.Injured.label=Skadad
+foxtrick.TeamStats.TransferListed.label=Transferlistad
+foxtrick.TeamStats.Pictures.label=Bilder
+foxtrick.TeamStats.PlayedLatest.label=Spelade i senaste matchen
+foxtrick.TeamStats.NotPlayedLatest.label=Spelade inte i senaste matchen
 
 #season stats
 #note to translators. use abreviations of league table where applicable
