--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -92,7 +92,7 @@ foxtrick.ForumRedirManagerToTeam.desc=Перенаправляє зі сторі
 foxtrick.ManagerButtons.addGuestbooklink.desc=Додає кнопки 'Надіслати повідомлення' та 'Написати в Гостьовій книзі' на сторінці менеджера
 foxtrick.ConfirmTL.desc=Додає вікно підтвердження виставлення гравця на трансфер
 foxtrick.HTThreadMarker.desc=Виділяє гілки форуму створені адміністрацією
-foxtrick.FTTeamStats.desc=Додає короткий огляд складу команди на сторінці гравців
+foxtrick.TeamStats.desc=Додає короткий огляд складу команди на сторінці гравців
 foxtrick.LargeFlags.desc=Замінює маленький прапор країни на сторінці гравця на більший
 foxtrick.GoToPostBox.desc=Додає поле 'Перейти до повідомлення X' на сторінці форуму
 foxtrick.TeamSelectBox.desc=Замінює список гравців на випадаюче меню на сторінці гравців. Щоб швидко перемкнутись з одного вигляду на інший просто натисніть на заголовку віконця 'Огляд'.
@@ -229,17 +229,17 @@ foxtrick.ExtraShortcuts.transfers=Трансфери
 foxtrick.links.boxheader=Посилання
 
 #teamstats
-foxtrick.FTTeamStats.label=Короткий огляд
-foxtrick.FTTeamStats.countries.label=Огляд країн
-foxtrick.FTTeamStats.totalTSI.label=Сумарний TSI
-foxtrick.FTTeamStats.PlayerNotToOld.label=Гравців < 19 років
-foxtrick.FTTeamStats.PlayerToOld.label=Гровців >= 19 років
-foxtrick.FTTeamStats.Cards.label=Попередження
-foxtrick.FTTeamStats.Injured.label=Травмовано
-foxtrick.FTTeamStats.TransferListed.label=На трансфері
-foxtrick.FTTeamStats.Pictures.label=Фото
-foxtrick.FTTeamStats.PlayedLatest.label=Грали в останньому матчі
-foxtrick.FTTeamStats.NotPlayedLatest.label=Не грали в останньому матчі
+foxtrick.TeamStats.label=Короткий огляд
+foxtrick.TeamStats.countries.label=Огляд країн
+foxtrick.TeamStats.totalTSI.label=Сумарний TSI
+foxtrick.TeamStats.PlayerNotToOld.label=Гравців < 19 років
+foxtrick.TeamStats.PlayerToOld.label=Гровців >= 19 років
+foxtrick.TeamStats.Cards.label=Попередження
+foxtrick.TeamStats.Injured.label=Травмовано
+foxtrick.TeamStats.TransferListed.label=На трансфері
+foxtrick.TeamStats.Pictures.label=Фото
+foxtrick.TeamStats.PlayedLatest.label=Грали в останньому матчі
+foxtrick.TeamStats.NotPlayedLatest.label=Не грали в останньому матчі
 
 #season stats
 #note to translators. use abreviations of league table where applicable
