--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -148,7 +148,7 @@ foxtrick.ManagerButtons.desc=在球队与经理页面上添加或更改按钮
 foxtrick.ManagerButtons.GuestBook.desc=添加在访客记录上留言的按钮
 foxtrick.ManagerButtons.LargeSendMail.desc=打开完整的信箱页面而不是嵌入的小页面
 foxtrick.HTThreadMarker.desc=高亮由 HT 工作人员创建的帖子
-foxtrick.FTTeamStats.desc=在球员列表页面显示球队概述.
+foxtrick.TeamStats.desc=在球员列表页面显示球队概述.
 foxtrick.ExtraPlayerInfo.desc=在球员列表页面显示额外的信息
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=教练能力和类型
 foxtrick.ExtraPlayerInfo.Flag.desc=将球员的国籍显示为国旗
@@ -387,15 +387,15 @@ foxtrick.youthpromotedays.prom_t=今天即可提拔该球员至成年队!
 foxtrick.links.boxheader=链接
 
 #teamstats
-foxtrick.FTTeamStats.label=球队概述
-foxtrick.FTTeamStats.PlayerNotToOld.label=球员 < 19岁
-foxtrick.FTTeamStats.PlayerToOld.label=球员 >= 19岁
-foxtrick.FTTeamStats.Cards.label=警告
-foxtrick.FTTeamStats.Injured.label=受伤
-foxtrick.FTTeamStats.TransferListed.label=在转会列表上
-foxtrick.FTTeamStats.Pictures.label=面貌
-foxtrick.FTTeamStats.PlayedLatest.label=在上一场比赛中出场
-foxtrick.FTTeamStats.NotPlayedLatest.label=未在上一场比赛中出场
+foxtrick.TeamStats.label=球队概述
+foxtrick.TeamStats.PlayerNotToOld.label=球员 < 19岁
+foxtrick.TeamStats.PlayerToOld.label=球员 >= 19岁
+foxtrick.TeamStats.Cards.label=警告
+foxtrick.TeamStats.Injured.label=受伤
+foxtrick.TeamStats.TransferListed.label=在转会列表上
+foxtrick.TeamStats.Pictures.label=面貌
+foxtrick.TeamStats.PlayedLatest.label=在上一场比赛中出场
+foxtrick.TeamStats.NotPlayedLatest.label=未在上一场比赛中出场
 
 #season stats
 #note to translators. use abreviations of league table where applicable
