--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -89,7 +89,7 @@ foxtrick.ForumRedirManagerToTeam.desc=Redirect links from manager page to user p
 foxtrick.ManagerButtons.addGuestbooklink.desc=Adds Send Message and Write in Guestbook buttons to manager page
 foxtrick.ConfirmTL.desc=Adds player transferlist confirm box
 foxtrick.HTThreadMarker.desc=Marks threads created by HTs
-foxtrick.FTTeamStats.desc=Compiles an overview of team.
+foxtrick.TeamStats.desc=Compiles an overview of team.
 foxtrick.LargeFlags.desc=Replaces the tiny country flag on player pages with a large one
 foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page
 foxtrick.TeamSelectBox.desc=Replaces the list of players by a selectbox on players page
@@ -149,13 +149,13 @@ foxtrick.ExtraShortcuts.transfers=Transfers
 foxtrick.links.boxheader=Links
 
 #teamstats
-foxtrick.FTTeamStats.label=Team overview
-foxtrick.FTTeamStats.countries.label=Country overview
-foxtrick.FTTeamStats.totalTSI.label=TOTAL TSI
-foxtrick.FTTeamStats.Cards.label=Cards
-foxtrick.FTTeamStats.Injured.label=Injured
-foxtrick.FTTeamStats.TransferListed.label=Transfer listed
-foxtrick.FTTeamStats.Pictures.label=Team Photo
+foxtrick.TeamStats.label=Team overview
+foxtrick.TeamStats.countries.label=Country overview
+foxtrick.TeamStats.totalTSI.label=TOTAL TSI
+foxtrick.TeamStats.Cards.label=Cards
+foxtrick.TeamStats.Injured.label=Injured
+foxtrick.TeamStats.TransferListed.label=Transfer listed
+foxtrick.TeamStats.Pictures.label=Team Photo
 
 #gotoPostBox
 foxtrick.GoToPostBox.label=goto
