--- a/content/locale/fur/foxtrick.properties
+++ b/content/locale/fur/foxtrick.properties
@@ -142,7 +142,7 @@ foxtrick.ForumRedirManagerToTeam.desc=Redirect links from manager page to team p
 foxtrick.ManagerButtons.addGuestbooklink.desc=Adds Send Message and Write in Guestbook buttons to manager page
 foxtrick.ConfirmTL.desc=Adds box to ask for confirmation before transferlisting a player
 foxtrick.HTThreadMarker.desc=Marks threads created by HTs
-foxtrick.FTTeamStats.desc=Compiles an overview of a team.
+foxtrick.TeamStats.desc=Compiles an overview of a team.
 foxtrick.HistoryStats.desc=Compiles an overview of team's history.
 foxtrick.HistoryStats.season=season
 foxtrick.HistoryStats.cup=cup
@@ -374,17 +374,17 @@ foxtrick.youthpromotedays.prom_t=Player can be promoted today!
 foxtrick.links.boxheader=Links
 
 #teamstats
-foxtrick.FTTeamStats.label=Team overview
-foxtrick.FTTeamStats.countries.label=Country overview
-foxtrick.FTTeamStats.totalTSI.label=TOTAL TSI
-foxtrick.FTTeamStats.PlayerNotToOld.label=Players < 19 yr
-foxtrick.FTTeamStats.PlayerToOld.label=Players >= 19 yr
-foxtrick.FTTeamStats.Cards.label=Cards
-foxtrick.FTTeamStats.Injured.label=Injured
-foxtrick.FTTeamStats.TransferListed.label=Transfer listed
-foxtrick.FTTeamStats.Pictures.label=Pictures
-foxtrick.FTTeamStats.PlayedLatest.label=Played in last match
-foxtrick.FTTeamStats.NotPlayedLatest.label=Did not play last match
+foxtrick.TeamStats.label=Team overview
+foxtrick.TeamStats.countries.label=Country overview
+foxtrick.TeamStats.totalTSI.label=TOTAL TSI
+foxtrick.TeamStats.PlayerNotToOld.label=Players < 19 yr
+foxtrick.TeamStats.PlayerToOld.label=Players >= 19 yr
+foxtrick.TeamStats.Cards.label=Cards
+foxtrick.TeamStats.Injured.label=Injured
+foxtrick.TeamStats.TransferListed.label=Transfer listed
+foxtrick.TeamStats.Pictures.label=Pictures
+foxtrick.TeamStats.PlayedLatest.label=Played in last match
+foxtrick.TeamStats.NotPlayedLatest.label=Did not play last match
 
 #season stats
 #note to translators. use abreviations of league table where applicable
