--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -146,7 +146,7 @@ foxtrick.ManagerButtons.addGuestbooklink.desc=Iżid il-buttuni Ibgħat Messaġġ
 foxtrick.ConfirmTL.desc=Itella' kaxxa biex isaqsik konfermazzjoni meta tkun ħa titfa' plejer għall-bejgħ
 foxtrick.ConfirmStaffChange.desc=Itella' kaxxa biex isaqsik konfermazzjoni meta tkun se tikri/tkeċċi persuna mill-istaff
 foxtrick.HTThreadMarker.desc=Jimmarka threads miftuħa mill-HTs
-foxtrick.FTTeamStats.desc=Jikkompila titwila ġenerali fuq tim, iżid filtri u jista' jżid informazzjoni żejda fuq il-plejers.
+foxtrick.TeamStats.desc=Jikkompila titwila ġenerali fuq tim, iżid filtri u jista' jżid informazzjoni żejda fuq il-plejers.
 foxtrick.ExtraPlayerInfo.Flag.desc=Iżid il-bnadars għall-plejers.
 foxtrick.ExtraPlayerInfo.LeadershipAndExperience.desc=Iżid il-mod ta' tmexxija u l-esperjenza għall-plejers.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Iżid l-orjentazzjoni lill-kowċis preżenti u ta' qabel.
@@ -398,17 +398,17 @@ foxtrick.youthpromotedays.prom_t=Il-plejer jista' jittella' illum stess!
 foxtrick.links.boxheader=Links
 
 #teamstats
-foxtrick.FTTeamStats.label=It-tim inġenerali
-foxtrick.FTTeamStats.countries.label=Il-pajjiż inġenerali
-foxtrick.FTTeamStats.totalTSI.label=TSI TOTALI
-foxtrick.FTTeamStats.PlayerNotToOld.label=Plejers < 19-il sena
-foxtrick.FTTeamStats.PlayerToOld.label=Plejers >= 19-il sena
-foxtrick.FTTeamStats.Cards.label=Karti
-foxtrick.FTTeamStats.Injured.label=Imweġġa'
-foxtrick.FTTeamStats.TransferListed.label=Għall-bejgħ
-foxtrick.FTTeamStats.Pictures.label=Stampi
-foxtrick.FTTeamStats.PlayedLatest.label=Lagħab fl-aħħar partita
-foxtrick.FTTeamStats.NotPlayedLatest.label=Ma lagħabx fl-aħħar partita
+foxtrick.TeamStats.label=It-tim inġenerali
+foxtrick.TeamStats.countries.label=Il-pajjiż inġenerali
+foxtrick.TeamStats.totalTSI.label=TSI TOTALI
+foxtrick.TeamStats.PlayerNotToOld.label=Plejers < 19-il sena
+foxtrick.TeamStats.PlayerToOld.label=Plejers >= 19-il sena
+foxtrick.TeamStats.Cards.label=Karti
+foxtrick.TeamStats.Injured.label=Imweġġa'
+foxtrick.TeamStats.TransferListed.label=Għall-bejgħ
+foxtrick.TeamStats.Pictures.label=Stampi
+foxtrick.TeamStats.PlayedLatest.label=Lagħab fl-aħħar partita
+foxtrick.TeamStats.NotPlayedLatest.label=Ma lagħabx fl-aħħar partita
 
 #season stats
 #note to translators. use abreviations of league table where applicable
