--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -147,12 +147,12 @@ foxtrick.ManagerButtons.desc=Dodaje przyciski na stronie prezesa i drużyny
 foxtrick.ManagerButtons.GuestBook.desc=Dodaje przycisk 'Wpisz się do Księgi gości' na stronie prezesa i drużyny
 foxtrick.ManagerButtons.LargeSendMail.desc=Otwiera skrzynkę pocztową w dużej postaci
 foxtrick.HTThreadMarker.desc=Koloruje wątki na forum utworzone przez HT-ków
-foxtrick.FTTeamStats.desc=Dodaje informacje o kartkach, kontuzjach, specjalnościach na stronie Zawodnicy
-foxtrick.FTTeamStats.General.desc=Informacje ogólne (TSI/wiek)
-foxtrick.FTTeamStats.Speciality.desc=Specjalność
-foxtrick.FTTeamStats.Personality.desc=Osobowość
-foxtrick.FTTeamStats.Status.desc=Status (kartki/kontuzje)
-foxtrick.FTTeamStats.Current_league.desc=Bieżąca liga
+foxtrick.TeamStats.desc=Dodaje informacje o kartkach, kontuzjach, specjalnościach na stronie Zawodnicy
+foxtrick.TeamStats.General.desc=Informacje ogólne (TSI/wiek)
+foxtrick.TeamStats.Speciality.desc=Specjalność
+foxtrick.TeamStats.Personality.desc=Osobowość
+foxtrick.TeamStats.Status.desc=Status (kartki/kontuzje)
+foxtrick.TeamStats.Current_league.desc=Bieżąca liga
 foxtrick.ExtraPlayerInfo.Flag.desc=Dodaje flagę na stronie zawodnika
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Pokazuje typ trenera.
 foxtrick.ExtraPlayerInfo.LeadershipAndExperience.desc=Pokazuje przywództwo i doświadczenie zawodników
@@ -390,15 +390,15 @@ foxtrick.youthpromotedays.prom_t=Możesz promować tego zawodnika!
 foxtrick.links.boxheader=Linki
 
 #teamstats
-foxtrick.FTTeamStats.label=Przegląd drużyny
-foxtrick.FTTeamStats.PlayerNotToOld.label=Zawodnicy poniżej 19 lat
-foxtrick.FTTeamStats.PlayerToOld.label=Zawodnicy powyżej 19 lat
-foxtrick.FTTeamStats.Cards.label=Kartki
-foxtrick.FTTeamStats.Injured.label=Kontuzjowani
-foxtrick.FTTeamStats.TransferListed.label=Na sprzedaż
-foxtrick.FTTeamStats.Pictures.label=Twarze
-foxtrick.FTTeamStats.PlayedLatest.label=Grał w ostatnim meczu
-foxtrick.FTTeamStats.NotPlayedLatest.label=Nie grał w ostatnim meczu
+foxtrick.TeamStats.label=Przegląd drużyny
+foxtrick.TeamStats.PlayerNotToOld.label=Zawodnicy poniżej 19 lat
+foxtrick.TeamStats.PlayerToOld.label=Zawodnicy powyżej 19 lat
+foxtrick.TeamStats.Cards.label=Kartki
+foxtrick.TeamStats.Injured.label=Kontuzjowani
+foxtrick.TeamStats.TransferListed.label=Na sprzedaż
+foxtrick.TeamStats.Pictures.label=Twarze
+foxtrick.TeamStats.PlayedLatest.label=Grał w ostatnim meczu
+foxtrick.TeamStats.NotPlayedLatest.label=Nie grał w ostatnim meczu
 
 #season stats
 #note to translators. use abreviations of league table where applicable
