--- a/content/locale/ru/releaseNotes.xml
+++ b/content/locale/ru/releaseNotes.xml
@@ -1,22 +1,26 @@
+
 <?xml version="1.0" encoding="utf-8"?>
 
 <release_note>
 
 <version>0.5.3.0</version>
-  <title>Информация о выпуске (основные изменения и новые возможности)</title>
-  <lines>ContextCopy: Полная переработка модуля. Копирование любого выделенного текста в формате HT-ML.</lines>
-  <lines>ExtraShortcuts: Опционально дополнительное место для ссылок. Добавлены ссылки на национальные Hattrick-радио.</lines>
-  <lines>TableSort: Возможность сортировки таблиц по столбцам.</lines>
-  <lines>TransferSearchResultFilters: Фильтрация списка результатов поиска трансферов.</lines>
-  <lines>YouthSeriesEstimation: Новый модуль для оценки времени начала матчей в юношеской лиге.</lines>
-  <lines>ForumYouthIcons: Новая кнопка для преобразования текста в таблицу.</lines>
+<title>Информация о выпуске (основные изменения и новые возможности)</title>
+<lines>ContextCopy: Полная переработка модуля. Копирование любого выделенного текста в формате HT-ML.</lines>
+<lines>ExtraShortcuts: Опционально дополнительное место для ссылок. Добавлены ссылки на национальные Hattrick-радио.</lines>
+<lines>TableSort: Возможность сортировки таблиц по столбцам.</lines>
+<lines>TransferSearchResultFilters: Фильтрация списка результатов поиска трансферов.</lines>
+<lines>YouthSeriesEstimation: Новый модуль для оценки времени начала матчей в юношеской лиге.</lines>
+<lines>ForumYouthIcons: Новая кнопка для преобразования текста в таблицу.</lines>
+<lines>ForumThreadAutoIgnore: Автоигнорирование тем форума, включающих выбранный пользователем текст</lines>
 
-  <lines>SkillTable: Таблица навыков добавлена к результатам поиска трансферов. Также в таблице появились новые столбцы.</lines>
-  <lines>TeamStats: Добавлены столбцы для лидерских качеств и характера.</lines>
-  <lines>CopyPlayerAd: Теперь поддерживаются игроки академии и навыки игрока отсортированы.</lines>
 
-  <lines></lines> 
-  <lines>Внимание!</lines>
-  <lines>Все пользовательские цвета были вынесены в файл стиля в целях облегчения настроек FoxTrick. Ранее сохранённые цвета утеряны. Смотрите вкладку Помощь в настройках, чтобы получить инструкции как установить свои цвета. Это на самом деле не так трудно.</lines>
+<lines>SkillTable: Таблица навыков добавлена к результатам поиска трансферов. Также в таблице появились новые столбцы.</lines>
+<lines>TeamStats: Добавлены столбцы для лидерских качеств и характера.</lines>
+<lines>CopyPlayerAd: Теперь поддерживаются игроки академии и навыки игрока отсортированы.</lines>
+<lines>SmallerPages: Уменьшение шинины страницы для не-саппортеров, если запрещены баннеры.</lines>
+
+<lines></lines> 
+<lines>Внимание!</lines>
+<lines>Все пользовательские цвета были вынесены в файл стиля в целях облегчения настроек FoxTrick. Ранее сохранённые цвета утеряны. Смотрите вкладку Помощь в настройках, чтобы получить инструкции как установить свои цвета. Это на самом деле не так трудно.</lines>
 
 </release_note>
