--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -142,7 +142,9 @@ foxtrick.ForumNextAndPrevious.desc=Уклања дугмиће 'Наредни' 
 foxtrick.ForumLastPost.desc=Замењује линкове у листи тема на форуму линковима до последње поруке у већ прочитаним темама.
 foxtrick.ForumLastPost.lastpage.desc=Иди на последњу страницу, а не на последњу поруку.
 foxtrick.MatchPlayerColouring.desc=Сенчи играче у меч извештају у зависности од тима за који су играли. Уколико на страницу меч извештаја дођете преко линка на страници играча, само ће тај играч бити осенчен.
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Посебно сенчење за играче вашег тима.
 foxtrick.MatchReportFormat.desc=Презентација извештаја по линијaма на основу догађаја са меча. Боје за оквире, позадине и имена клубова можете подесити и сами а за више информација о томе погледајте одељак 'Стилизовање Фокстрика' у језичку 'О Фокстрику'.
+foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Посебно сенчење за ваш тим.
 foxtrick.ForumRedirManagerToTeam.desc=Преусмерава линкове на форуму са странице менаџера на страницу тима.
 foxtrick.ManagerButtons.desc=Додај или промени дугмиће на страници менаџера или тима.
 foxtrick.ManagerButtons.GuestBook.desc=Додаје линк 'Упиши се у књигу гостију' на страницу менаџера.
